cabal-version:   3.0
name:            de-bruijn
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com
copyright:       2023 (c) Wen Kokke
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Data.DeBruijn
  build-depends:    base ^>=4.17.0.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite de-bruijn-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    , base       ^>=4.17.0.0
    , de-bruijn
