cabal-version:   3.0
name:            debruijn
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com
copyright:       2023 (c) Wen Kokke
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

common language
  default-extensions: DataKinds
  default-language:   Haskell2010

library
  import:          warnings
  import:          language
  exposed-modules: Data.DeBruijn
  build-depends:
    , base        ^>=4.18.0.0
    , QuickCheck  ^>=2.14.2

  hs-source-dirs:  src

test-suite debruijn-test
  import:         warnings
  import:         language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , base        ^>=4.18.0.0
    , debruijn
    , QuickCheck  ^>=2.14.2
